# n-sup

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  LEPTOS.md  PROJECT_STRUCTURE.md  README.md  Trunk.toml  index.html  package-lock.json  package.json
.dist/: tailwind.css
.github/: leptos_csr
.github/workflows/: deploy.yml
public/: 404.html  styles.scss
src/: lib.rs  main.rs
src/components/: benefits.rs  counter_btn.rs  cta_section.rs  features.rs  footer.rs  header.rs  hero_section.rs  mod.rs  navigation.rs  ui.rs
src/pages/: ai_tool_suggestions.rs  chat.rs  dashboard.rs  employee_management.rs  home.rs  mod.rs  nc_program_management.rs  nc_program_support.rs  tool_management.rs
src/utils/: animations.rs  event_handlers.rs  mod.rs
