[package]
name = "n-sup"
version = "0.1.0"
edition = "2021"
authors = ["dsk-code <dsk0425lucky@iCloud.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlElement", "DomRect", "EventListener", "NodeList", "DomTokenList", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "MouseEvent", "CssStyleDeclaration", "HtmlAnchorElement", "Event", "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition"] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"

[dev-dependencies]
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
